# InCar-ASR

./: .gitignore  LICENSE  Makefile  README.md  gen_charts.py  pyproject.toml  requirements-demo.txt  requirements-microphone.txt  test.m4a  test2.m4a  任务.md  项目书-车载环境端侧语音识别系统.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: atlas-smoke.yml  ci.yml
apps/: __init__.py
apps/dashboard/: __init__.py  index.html  server.py
charts/: README.md
configs/: baseline.json
docs/: PROJECT_STATUS.md  RELEASE.md  REMOTE_ATLAS.md  TRAINING_AND_EVALUATION.md
modules/01_dataset_building/: README.md  requirements.txt
modules/01_dataset_building/configs/: audio.yaml
modules/01_dataset_building/data/: README.md  metadata_template.csv
modules/01_dataset_building/docs/: data_collection.md
modules/01_dataset_building/scripts/audio/: augment_audio.py  collect_audio.py  common.py  download_noise.py  preprocess_audio.py  validate_dataset.py
modules/01_dataset_building/tests/: test_audio_pipeline.py
modules/02_asr_model_training/data/: dev.jsonl  test.jsonl  train.jsonl  train_train.jsonl  train_val.jsonl  val.jsonl
modules/02_asr_model_training/outputs/: cer_report.md
modules/02_asr_model_training/scripts/: 01_prepare_manifest.py  02_build_feature_cache.py  02_finetune.py  03_evaluate_baseline.py  06_cer_report.py
modules/03_model_compression_distillation/outputs/: compression_report.md
modules/03_model_compression_distillation/scripts/: 01_knowledge_distillation.py  02_export_onnx.py  03_compare_onnx.py
modules/04_atlas_edge_deployment/: .gitignore  CMakeLists.txt  README.md
modules/04_atlas_edge_deployment/include/: ascend_inference.h  asr_engine.h  audio_preprocess.h  common.h  ctc_decoder.h  vad_detector.h
modules/04_atlas_edge_deployment/scripts/: asr_infer.py  asr_test.py  atc_convert.sh  atlas_smoke.sh  env_setup.sh  onnx_asr_test.py  profile.sh  write_board_report.py  write_model_manifest.py
modules/04_atlas_edge_deployment/src/: acl_hello.cpp  ascend_inference.cpp  asr_engine.cpp  audio_preprocess.cpp  ctc_decoder.cpp  main.cpp  utils.cpp  vad_detector.cpp
modules/04_atlas_edge_deployment/tests/: host_unit.cpp
modules/05_system_integration_testing/outputs/: test_plan.jsonl  test_plan_plan.md
modules/05_system_integration_testing/scripts/: 01_e2e_system.py  02_test_matrix.py
scripts/: __init__.py  baseline_config.py  download_demo_model.py  frontend.py  manifest_utils.py  microphone_demo.py  run_demo.sh  run_demo_tests.sh  transcribe.py
tests/: test_baseline_config.py  test_board_report.py  test_dashboard.py  test_download_demo_model.py  test_feature_cache.py  test_frontend.py  test_manifest_utils.py  test_transcribe.py
