[project]
name = "incar-asr"
version = "0.1.0"
description = "In-Car Edge-Side Speech Recognition System"
requires-python = ">=3.12"
dependencies = [
    "funasr>=1.3.14",
    "librosa>=0.11.0",
    "onnx-simplifier>=0.5.0",
    "onnxruntime>=1.27.0",
    "onnxscript>=0.7.1",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
